# elastic-wave-fdm-2d

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  environment.json
Debug/: FDM_ELASTIC_WAVE_2D  makefile
include/elastic_wave/: simulation.hpp
main/: main.cpp
src/: configuration.cpp  main.cpp  simulation.cpp  visualizer_sdl.cpp  visualizer_win32.cpp
tests/: simulation_test.cpp
